--- a/designer/CharakterTalentPicker.ui
+++ b/designer/CharakterTalentPicker.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Sephrasto - Talente wählen...</string>
+   <string>Taverne - Talente wählen...</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="1" column="0">
@@ -54,8 +54,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>380</width>
-            <height>433</height>
+            <width>379</width>
+            <height>448</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout_2">
