--- a/designer/DatenbankErrorLog.ui
+++ b/designer/DatenbankErrorLog.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Sephrasto - Datenbankfehler</string>
+   <string>Taverne - Datenbankfehler</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="3" column="0">
