--- a/designer/ScriptPicker.ui
+++ b/designer/ScriptPicker.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Sephrasto - Script erstellen...</string>
+   <string>Taverne - Script erstellen...</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
@@ -165,8 +165,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>373</width>
-            <height>176</height>
+            <width>401</width>
+            <height>181</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout">
