--- a/designer/DatenbankMain.ui
+++ b/designer/DatenbankMain.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Sephrasto - Datenbank-Editor</string>
+   <string>Taverne - Datenbank-Editor</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
@@ -279,7 +279,7 @@
      <x>0</x>
      <y>0</y>
      <width>853</width>
-     <height>25</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuDatei">
