--- a/designer/Einstellungen.ui
+++ b/designer/Einstellungen.ui
@@ -20,7 +20,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Sephrasto - Einstellungen</string>
+   <string>Taverne - Einstellungen</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <property name="leftMargin">
@@ -90,7 +90,7 @@
             <x>0</x>
             <y>0</y>
             <width>766</width>
-            <height>715</height>
+            <height>728</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout">
@@ -123,7 +123,7 @@
               <item row="8" column="0">
                <widget class="QLabel" name="label_16">
                 <property name="text">
-                 <string>Dem Charakterbogen Ilaris Regeln anhängen</string>
+                 <string>Dem Charakterbogen Drachentöter Regeln anhängen</string>
                 </property>
                </widget>
               </item>
@@ -220,7 +220,7 @@
                  </size>
                 </property>
                 <property name="toolTip">
-                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Hier erscheinen alle Charakterbögen, die mit Sephrasto geliefert werden sowie alle aus deinem Charakterbogen-Pfad, siehe unten. Der gewählte Charakterbogen wird bei neuen Charakteren automatisch aktiv gesetzt. Dies kannst du nachträglich im Info-Tab des Charaktereditors ändern.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Hier erscheinen alle Charakterbögen, die mit Taverne geliefert werden sowie alle aus deinem Charakterbogen-Pfad, siehe unten. Der gewählte Charakterbogen wird bei neuen Charakteren automatisch aktiv gesetzt. Dies kannst du nachträglich im Info-Tab des Charaktereditors ändern.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                 </property>
                </widget>
               </item>
@@ -265,7 +265,7 @@
               <item row="8" column="2">
                <widget class="QCheckBox" name="checkCheatsheet">
                 <property name="toolTip">
-                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Sephrasto kann automatisch alle Regeln, die für deinen Charakter relevant sind, zusammentragen und deiner PDF hinten anfügen. Diese Einstellung gilt für neue Charaktere. Du kannst sie nachträglich im Info-Tab des Charaktereditors ändern.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Taverne kann automatisch alle Regeln, die für deinen Charakter relevant sind, zusammentragen und deiner PDF hinten anfügen. Diese Einstellung gilt für neue Charaktere. Du kannst sie nachträglich im Info-Tab des Charaktereditors ändern.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                 </property>
                 <property name="text">
                  <string/>
@@ -519,7 +519,7 @@
               <item row="2" column="2">
                <widget class="QCheckBox" name="checkUpdate">
                 <property name="toolTip">
-                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Falls aktiviert sendet Sephrasto bei jedem Start eine Anfrage an github.com, um nachzusehen, ob es eine neuere Version gibt.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Falls aktiviert sendet Taverne bei jedem Start eine Anfrage an github.com, um nachzusehen, ob es eine neuere Version gibt.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                 </property>
                 <property name="text">
                  <string/>
@@ -831,7 +831,7 @@
           <item row="5" column="2">
            <widget class="QCheckBox" name="checkDPI">
             <property name="toolTip">
-             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Viele Betriebssysteme bieten an, Programme, Schriften usw. größer darzustellen. Sephrasto kann diese sogenannte DPI-Skalierung vom Betriebssystem übernehmen. Dabei kann es aktuell allerdings noch zu Darstellungsfehlern wie niedrigaufgelösten Bildern oder Icons kommen.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Viele Betriebssysteme bieten an, Programme, Schriften usw. größer darzustellen. Taverne kann diese sogenannte DPI-Skalierung vom Betriebssystem übernehmen. Dabei kann es aktuell allerdings noch zu Darstellungsfehlern wie niedrigaufgelösten Bildern oder Icons kommen.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
             </property>
             <property name="text">
              <string/>
