--- a/designer/MainWindow.ui
+++ b/designer/MainWindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Sephrasto</string>
+   <string>Taverne</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
@@ -124,7 +124,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Sephrasto</string>
+      <string>Taverne zum Drachentöter</string>
      </property>
      <property name="scaledContents">
       <bool>false</bool>
@@ -152,7 +152,7 @@
       </size>
      </property>
      <property name="text">
-      <string>Der Charaktergenerator für Ilaris</string>
+      <string>Der Charaktergenerator für Drachentöter</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -199,8 +199,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>114</width>
-          <height>212</height>
+          <width>116</width>
+          <height>231</height>
          </rect>
         </property>
         <property name="class" stdset="0">
