--- a/designer/CharakterUebernatuerlich.ui
+++ b/designer/CharakterUebernatuerlich.ui
@@ -175,7 +175,7 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>355</width>
+         <width>377</width>
          <height>529</height>
         </rect>
        </property>
@@ -472,6 +472,38 @@
          <widget class="QLabel" name="label_7">
           <property name="text">
            <string>FW:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="3">
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string>PW(T):</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="4">
+         <widget class="QSpinBox" name="spinPWT">
+          <property name="minimumSize">
+           <size>
+            <width>60</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>60</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignmentFlag::AlignCenter</set>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+          <property name="buttonSymbols">
+           <enum>QAbstractSpinBox::ButtonSymbols::NoButtons</enum>
           </property>
          </widget>
         </item>
